# muxon

./: .gitignore  CHANGELOG.md  Cargo.toml  ESTIMATES.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TASKS.md  clippy.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/workflows/: ci.yml
crates/resurreccion-aigents/: Cargo.toml
crates/resurreccion-aigents/src/: lib.rs
crates/resurreccion-aigents/tests/: trait_exists.rs
crates/resurreccion-bundles/: Cargo.toml
crates/resurreccion-bundles/src/: lib.rs
crates/resurreccion-claude/: Cargo.toml
crates/resurreccion-claude/src/: lib.rs
crates/resurreccion-claude/tests/: claude_aigent.rs
crates/resurreccion-cli/: Cargo.toml  build.rs
crates/resurreccion-cli/src/: lib.rs  main.rs
crates/resurreccion-cli/tests/: cli_args.rs
crates/resurreccion-codex/: Cargo.toml
crates/resurreccion-codex/src/: lib.rs
crates/resurreccion-core/: Cargo.toml
crates/resurreccion-core/src/: error.rs  events.rs  fidelity.rs  ids.rs  lib.rs
crates/resurreccion-core/tests/: types_compile.rs
crates/resurreccion-daemon/: Cargo.toml
crates/resurreccion-daemon/src/: bus.rs  bus_test.rs  capability_handler.rs  dispatch.rs  events_handler.rs  handlers.rs  lib.rs  main.rs  runtime.rs  shell_handlers.rs  wiring.rs
crates/resurreccion-daemon/tests/: daemon_dispatch.rs  integration.rs  shell_verbs.rs  snapshot_verbs.rs  workspace_verbs.rs
crates/resurreccion-dag/: Cargo.toml
crates/resurreccion-dag/src/: completeness.rs  cycle.rs  lib.rs  termination.rs  walk.rs  wiring.rs
crates/resurreccion-dir/: Cargo.toml
crates/resurreccion-dir/src/: lib.rs
crates/resurreccion-dir/tests/: binding.rs
crates/resurreccion-editor/: Cargo.toml
crates/resurreccion-editor/src/: lib.rs
crates/resurreccion-editor/tests/: trait_exists.rs
crates/resurreccion-emacs/: Cargo.toml
crates/resurreccion-emacs/src/: lib.rs
crates/resurreccion-emacs/tests/: emacs_adapter.rs
crates/resurreccion-federation/: Cargo.toml
crates/resurreccion-federation/src/: lib.rs
crates/resurreccion-headless/: Cargo.toml
crates/resurreccion-headless/src/: lib.rs
crates/resurreccion-mux/: Cargo.toml
crates/resurreccion-mux/src/: conformance.rs  lib.rs
crates/resurreccion-mux/tests/: trait_exists.rs
crates/resurreccion-nvim/: Cargo.toml
crates/resurreccion-nvim/src/: lib.rs
crates/resurreccion-planner/: Cargo.toml
crates/resurreccion-planner/src/: lib.rs  verbs.rs
crates/resurreccion-planner/tests/: planner_impl.rs  types_exist.rs
crates/resurreccion-proto/: Cargo.toml
crates/resurreccion-proto/src/: lib.rs  verbs.rs
crates/resurreccion-proto/tests/: capability.rs  envelope.rs  subscription.rs
crates/resurreccion-remote/: Cargo.toml
crates/resurreccion-remote/src/: lib.rs
crates/resurreccion-replay/: Cargo.toml
crates/resurreccion-replay/src/: lib.rs
crates/resurreccion-replay/tests/: replay_session.rs
crates/resurreccion-search/: Cargo.toml
crates/resurreccion-search/src/: lib.rs
crates/resurreccion-shell/: Cargo.toml
crates/resurreccion-shell/src/: lib.rs
crates/resurreccion-shell/tests/: proc_capture.rs  trait_exists.rs
crates/resurreccion-ssh/: Cargo.toml
crates/resurreccion-ssh/src/: lib.rs
crates/resurreccion-store/: Cargo.toml
crates/resurreccion-store/migrations/: 001_initial.sql
crates/resurreccion-store/src/: lib.rs  types.rs
crates/resurreccion-store/tests/: api_compiles.rs  blob_store.rs  store_impl.rs
crates/resurreccion-timetravel/: Cargo.toml
crates/resurreccion-timetravel/src/: lib.rs
crates/resurreccion-tui/: Cargo.toml
crates/resurreccion-tui/src/: lib.rs
crates/resurreccion-zellij/: Cargo.toml
crates/resurreccion-zellij/src/: lib.rs
crates/resurreccion-zellij/tests/: zellij_mux.rs
docs/: ORCHESTRATOR.md  architecture.md  event-dag-insights.md  mux-trait-sketch.md  protocol.md  snapshot-format.md
plugins/resurreccion-zellij-plugin/: Cargo.toml
plugins/resurreccion-zellij-plugin/src/: lib.rs
tests/: test-workspace.sh
