[workspace]
members = [
  "crates/*",
  "plugins/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.6.0"
license = "MIT"
authors = ["Ardi <ardi@local>"]
repository = "https://github.com/ardi/muxon"

[workspace.dependencies]
rt-events-dag = { path = "/home/ardi/repos/promethea/rt-events-dag" }
rt-events = { path = "/home/ardi/repos/promethea/rt-events" }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
tempfile = "3"
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
ulid = { version = "1", features = ["serde"] }
blake3 = { version = "1", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
camino = { version = "1", features = ["serde1"] }
git2 = { version = "0.20", default-features = false }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
bitflags = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 1
debug = "limited"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.metadata.resurreccion]
project_name = "Muxon"
resurrection_system = "Resurreccion"
status = "scaffolded"
