[package]
name = "resurreccion-bundles"
description = "Snapshot bundle packaging for Resurreccion."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
resurreccion-store = { path = "../resurreccion-store" }
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
