[package]
name = "resurreccion-claude"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-aigents = { path = "../resurreccion-aigents" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
