[package]
name = "resurreccion-cli"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-proto = { path = "../resurreccion-proto" }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
