[package]
name = "resurreccion-codex"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-aigents = { path = "../resurreccion-aigents" }
serde_json.workspace = true
anyhow.workspace = true
serde.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
