[package]
name = "resurreccion-daemon"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-proto = { path = "../resurreccion-proto" }
rt-events = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
