[package]
name = "resurreccion-daemon"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-core = { path = "../resurreccion-core" }
rt-events-dag.workspace = true
resurreccion-proto = { path = "../resurreccion-proto" }
resurreccion-store = { path = "../resurreccion-store" }
resurreccion-dir = { path = "../resurreccion-dir" }
resurreccion-mux = { path = "../resurreccion-mux" }
resurreccion-planner = { path = "../resurreccion-planner" }
resurreccion-zellij = { path = "../resurreccion-zellij" }
rt-events = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
directories.workspace = true
ulid = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile.workspace = true
