[package]
name = "resurreccion-dag"
version.workspace = true
edition.workspace = true

# This crate is the seed of the future `rt-event-dag` crate.
# It owns the DAG topology: node declarations, edge declarations
# (where each edge IS an event type), and structural invariants.
#
# Current scope: cycle detection only.
# Future scope: DSL macro, bus wiring, event loop runner, DOT export.

[dependencies]
