[package]
name = "resurreccion-dir"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-core = { path = "../resurreccion-core" }
camino.workspace = true
git2.workspace = true
anyhow.workspace = true
blake3.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
