[package]
name = "resurreccion-headless"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-store = { path = "../resurreccion-store" }
resurreccion-proto = { path = "../resurreccion-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
