[package]
name = "resurreccion-planner"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ulid.workspace = true
serde_json.workspace = true
resurreccion-mux = { path = "../resurreccion-mux" }
resurreccion-store = { path = "../resurreccion-store" }

[dev-dependencies]
tempfile = "3"
