[package]
name = "resurreccion-proto"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
insta.workspace = true
