[package]
name = "resurreccion-store"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rusqlite.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
