[package]
name = "resurreccion-zellij"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
resurreccion-mux = { path = "../resurreccion-mux" }
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }
serde_json.workspace = true
tracing.workspace = true
